--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.png?v=1" />
-    <link rel="shortcut icon" href="/favicon.png?v=1" />
+    <link rel="icon" href="/speccial.png?v=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DahliahLestari</title>
   </head>
