--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/speccial.png?v=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DahliahLestari</title>
+    <title>Special</title>
   </head>
   <body>
     <div id="root"></div>
